Basic design completed

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+header {
+  box-shadow: 0 7px 1px #dd3700;
+}
+.chatting {
+  background-color: #e5e5f7;
+  opacity: 0.8;
+  background-size: 8px 8px;
+  background-image: repeating-linear-gradient(
+    45deg,
+    rgba(255, 62, 0, .9) 0,
+    rgba(255, 62, 0, .9) 0.8px,
+    #e5e5f7 0,
+    #e5e5f7 50%
+  );
+}
