--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,46 @@
 header {
   box-shadow: 0 7px 1px #dd3700;
 }
-.chatting {
+.messages {
   background-color: #e5e5f7;
   opacity: 0.8;
   background-size: 8px 8px;
   background-image: repeating-linear-gradient(
     45deg,
-    rgba(255, 62, 0, .9) 0,
-    rgba(255, 62, 0, .9) 0.8px,
+    rgba(255, 62, 0, 0.6) 0,
+    rgba(255, 62, 0, 0.6) 0.8px,
     #e5e5f7 0,
     #e5e5f7 50%
   );
+}
+.messages {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.contact-one{
+  box-shadow: -1px 3px 1px #cc3401;
+}
+.contact-two{
+  box-shadow: 1px 3px 1px rgb(202, 202, 202);
+}
+
+/* Style the entire scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Style the track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Style the thumb */
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 7px;
+}
+
+/* Change thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
