--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 header {
   box-shadow: 0 7px 1px #dd3700;
 }
-.messages {
+main.no .messages {
   background-color: #e5e5f7;
   opacity: 0.8;
   background-size: 8px 8px;
@@ -15,6 +15,19 @@ header {
     #e5e5f7 50%
   );
 }
+main.yes .messages{
+  background-color: #21222d;
+  opacity: 0.95;
+  background-size: 8px 8px;
+  background-image: repeating-linear-gradient(
+    45deg,
+    rgba(248, 90, 37, 0.2) 0,
+    rgba(255, 62, 0, 0.2) 0.8px,
+    #21222d 0,
+    #21222d 50%
+  );
+}
+
 .messages {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
